<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.questions.ThirdQuestionFragment">

    <TextView
        android:id="@+id/third_question_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:text="@string/third_question_question"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <ImageButton
        android:id="@+id/third_question_first_answer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/third_question_first_answer"
        android:scaleType="centerCrop"
        android:src="@drawable/cameron"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/third_question_second_answer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_question_question"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/third_question_second_answer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/third_question_second_answer"
        android:scaleType="centerCrop"
        android:src="@drawable/spielberg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.680"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_question_question"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/third_question_third_answer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/third_question_third_answer"
        android:scaleType="centerCrop"
        android:src="@drawable/george_lucas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/third_question_fourth_answer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_question_first_answer"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/third_question_fourth_answer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/third_question_fourth_answer"
        android:scaleType="centerCrop"
        android:src="@drawable/ridley_scott"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.680"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_question_second_answer"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>